syntax="proto3";

option go_package="model/user";

package user;

message GreetingRequest{
    string name =1;
    string salutaion=2;
}

message GreetingResponse{
    string GreetingMessage = 1;
}

service UserService{
    rpc GetHello (GreetingRequest) returns (GreetingResponse);
}